Modernize and harden Glazed Lists integration
Update Glazed Lists APIs, iteration, event dispatch, generics, and contracts across Java and Kotlin callers. Improve lifecycle cleanup and resource disposal in Swing integrations, fix probable edge-case bugs, and add regression coverage for event, collection, matcher, tree, and dialog behavior. Clean up remaining Kotlin inspection warnings.