@@ -8,9 +8,7 @@ import ca.odell.glazedlists.gui.AdvancedTableFormat;
 import ca.odell.glazedlists.gui.WritableTableFormat;
 
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.Map;
-import java.util.Collections;
 
 /**
  * TableFormat implementation that uses reflection to be used for any
@@ -34,25 +32,21 @@ public class BeanTableFormat<E> implements WritableTableFormat<E>, AdvancedTable
     private final boolean[] editable;
 
     /** column comparators */
-    protected Comparator[] comparators;
+    protected Comparator<?>[] comparators;
 
     /** column classes */
-    protected Class[] classes;
+    protected Class<?>[] classes;
 
     /** primitive class to object class conversion map */
-    protected static final Map<Class,Class> primitiveToObjectMap;
-    static {
-        Map<Class,Class> primitiveToObjectMapWritable = new HashMap<>();
-        primitiveToObjectMapWritable.put(boolean.class, Boolean.class);
-        primitiveToObjectMapWritable.put(char.class, Character.class);
-        primitiveToObjectMapWritable.put(byte.class, Byte.class);
-        primitiveToObjectMapWritable.put(short.class, Short.class);
-        primitiveToObjectMapWritable.put(int.class, Integer.class);
-        primitiveToObjectMapWritable.put(long.class, Long.class);
-        primitiveToObjectMapWritable.put(float.class, Float.class);
-        primitiveToObjectMapWritable.put(double.class, Double.class);
-        primitiveToObjectMap = Collections.unmodifiableMap(primitiveToObjectMapWritable);
-    }
+    protected static final Map<Class<?>, Class<?>> primitiveToObjectMap = Map.of(
+            boolean.class, Boolean.class,
+            char.class, Character.class,
+            byte.class, Byte.class,
+            short.class, Short.class,
+            int.class, Integer.class,
+            long.class, Long.class,
+            float.class, Float.class,
+            double.class, Double.class);
 
 
     /**
@@ -65,8 +59,8 @@ public class BeanTableFormat<E> implements WritableTableFormat<E>, AdvancedTable
         this.editable = editable;
 
         // set up the AdvancedTableFormat properties
-        comparators = new Comparator[propertyNames.length];
-        classes = new Class[propertyNames.length];
+        comparators = new Comparator<?>[propertyNames.length];
+        classes = new Class<?>[propertyNames.length];
 
         // use default properties if no class is specified
         if(beanClass == null) {
@@ -80,12 +74,8 @@ public class BeanTableFormat<E> implements WritableTableFormat<E>, AdvancedTable
             loadPropertyDescriptors(beanClass);
             for(int c = 0; c < classes.length; c++) {
                 // class
-                Class rawClass = beanProperties[c].getValueClass();
-                if(primitiveToObjectMap.containsKey(rawClass)) {
-                    classes[c] = primitiveToObjectMap.get(rawClass);
-                } else {
-                    classes[c] = rawClass;
-                }
+                Class<?> rawClass = beanProperties[c].getValueClass();
+                classes[c] = primitiveToObjectMap.getOrDefault(rawClass, rawClass);
                 // comparator
                 if(Comparable.class.isAssignableFrom(classes[c])) comparators[c] = GlazedLists.comparableComparator();
                 else comparators[c] = null;
@@ -100,8 +90,9 @@ public class BeanTableFormat<E> implements WritableTableFormat<E>, AdvancedTable
      * Loads the property descriptors which are used to invoke property
      * access methods using the property names.
      */
+    @SuppressWarnings("unchecked")
     protected void loadPropertyDescriptors(Class<E> beanClass) {
-        beanProperties = new BeanProperty[propertyNames.length];
+        beanProperties = (BeanProperty<E>[]) new BeanProperty<?>[propertyNames.length];
         for(int p = 0; p < propertyNames.length; p++) {
             beanProperties[p] = new BeanProperty<>(beanClass, propertyNames[p], true, editable[p]);
         }
@@ -194,7 +185,7 @@ public class BeanTableFormat<E> implements WritableTableFormat<E>, AdvancedTable
      * Get the class of the specified column.
      */
     @Override
-    public Class getColumnClass(int column) {
+    public Class<?> getColumnClass(int column) {
         return classes[column];
     }
 
@@ -202,7 +193,7 @@ public class BeanTableFormat<E> implements WritableTableFormat<E>, AdvancedTable
      * Get the comparator for the specified column.
      */
     @Override
-    public Comparator getColumnComparator(int column) {
+    public Comparator<?> getColumnComparator(int column) {
         return comparators[column];
     }
 }
